// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with multiple items 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses
     totaling 
    $3,128.97
  </h1>
</div>
`;

exports[`should render ExpenseSummary with one item 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $0.10
  </h1>
</div>
`;
